--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -642,14 +642,54 @@ input, select, textarea {
 			font-family: 'Font Awesome 5 Brands';
 		}
 
-/* Image */
+	/* Image */
 
-	.image {
-		border-radius: 4px;
-		border: 0;
-		display: inline-block;
-		position: relative;
-	}
+		.container {
+			position: relative;
+			width: 100%;
+		}
+
+		.image {
+			opacity: 1;
+			display: block;
+			width: auto;
+			height: auto;
+			transition: .5s ease;
+			backface-visibility: hidden;
+		}
+
+		.middle {
+			transition: .5s ease;
+			opacity: 0;
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			-ms-transform: translate(-50%, -50%);
+			text-align: center;
+		}
+
+		.container:hover .image {
+			opacity: 0.3;
+		}
+
+		.container:hover .middle {
+			opacity: 1;
+		}
+
+		.text {
+			background-color: #A1A1A2;
+			color: white;
+			font-size: 16px;
+			padding: 16px 32px;
+		}
+
+		.image {
+			border-radius: 4px;
+			border: 0;
+			display: inline-block;
+			position: relative;
+		}
 
 		.image:before {
 			pointer-events: none;
@@ -1377,6 +1417,7 @@ input, select, textarea {
 
 					#header nav ul li a:hover {
 						background-color: rgba(255, 255, 255, 0.075);
+						color: #fff
 					}
 
 					#header nav ul li a:active {
